--- a/.prettierrc
+++ b/.prettierrc
@@ -16,6 +16,5 @@
   "trailingComma": "es5",
   "useTabs": false,
   "vueIndentScriptAndStyle": false,
-  "filepath": "none",
-  "parser": "babel"
+  "filepath": "none"
 }
