Update .gitlab-ci.yml file

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -23,6 +23,8 @@ build:
     - node
   script:
     - echo "Do your build here"
+    - npm install -g npm
+    - npm install -g yarn
     
 deploy:
   stage: deploy
