Update .gitlab-ci.yml file

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -24,4 +24,10 @@ build:
     - master
   script:
     - export NODE_PATH=`npm root -g`
-    - echo $NODE_PATH
+    - npm install -g npm
+    - npm install
+    - npx run build
+  artifacts:
+    paths:
+      - build
+    
