Update .gitlab-ci.yml file

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -23,10 +23,8 @@ build:
   only:
     - master
   script:
-    - export NODE_PATH=`npm root -g`
     - npm install -g npm
-    - npm install
-    - npx run build
+    - yarn
   artifacts:
     paths:
       - build
