--- a/package.json
+++ b/package.json
@@ -11,9 +11,14 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-redux": "^7.2.2",
-    "react-scripts": "^4.0.1",
+    "react-scripts": "^5.0.1",
     "sass": "^1.49.0",
     "web-vitals": "^0.2.4"
+  },
+  "resolutions": {
+    "immer": ">=9.0.6",
+    "ejs": ">=3.1.7",
+    "nth-check": ">=2.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
